--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Registration_Activity"></activity>
+        <activity android:name=".Registration_Activity" />
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".CreateActivity"></activity>
     </application>
 
 </manifest>
