--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".Registration_Activity" />
         <activity android:name=".MenuActivity" />
-        <activity android:name=".CreateActivity"></activity>
+        <activity android:name=".CreateActivity" />
+        <activity android:name=".SalaryActivity">
+        </activity>
     </application>
 
 </manifest>
