I am working on the Savings Tracker here

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".SalaryActivity" />
         <activity android:name=".WeeklySalaryActivity" />
         <activity android:name=".MonthlySalaryActivity" />
-        <activity android:name=".YearlySalaryActivity"></activity>
+        <activity android:name=".YearlySalaryActivity" />
+        <activity android:name=".BillReminderActivity"></activity>
     </application>
 
 </manifest>
