--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,8 @@
         <activity android:name=".SalaryActivity" />
         <activity android:name=".WeeklySalaryActivity" />
         <activity android:name=".MonthlySalaryActivity" />
-        <activity android:name=".YearlySalaryActivity" />
-        <activity android:name=".BillReminderActivity" />
-        <activity android:name=".BillSetActivity"></activity>
+        <activity android:name=".YearlySalaryActivity"></activity>
+        <activity android:name=".BillReminderActivity"></activity>
     </application>
 
 </manifest>
