I have succeeded in getting the list to display and getting the items to appear in the list, I am currently working on a dialog to appear to edit/delete a list item when it is clicked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".WeeklySalaryActivity" />
         <activity android:name=".MonthlySalaryActivity" />
         <activity android:name=".YearlySalaryActivity" />
-        <activity android:name=".BillReminderActivity"></activity>
+        <activity android:name=".SavingsTrackerActivity" />
     </application>
 
 </manifest>
