--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+
 android {
     compileSdkVersion 28
 
@@ -12,6 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.hammadhanif.finance_tracker"
+        multiDexEnabled true
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
@@ -28,6 +30,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:multidex:1.0.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-messaging:12.0.1'
