--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
         <activity android:name=".SalaryActivity" />
         <activity android:name=".WeeklySalaryActivity" />
         <activity android:name=".MonthlySalaryActivity" />
-        <activity android:name=".YearlySalaryActivity"></activity>
-        <activity android:name=".BillReminderActivity"></activity>
+        <activity android:name=".YearlySalaryActivity" />
+        <activity android:name=".BillReminderActivity" />
+        <activity android:name=".NotifyMeActivity"></activity>
     </application>
 
 </manifest>
