--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hammadhanif.finance_tracker">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,7 +23,8 @@
         <activity android:name=".MonthlySalaryActivity" />
         <activity android:name=".YearlySalaryActivity" />
         <activity android:name=".BillReminderActivity" />
-        <activity android:name=".NotifyMeActivity"></activity>
+        <activity android:name=".NotifyMeActivity" />
+        <activity android:name=".AddExpenseActivity"></activity>
     </application>
 
 </manifest>
